@@ -75,8 +75,9 @@ module God
         
         default_run
         
-        if @options[:log]
-          log_file = File.expand_path(@options[:log])
+        log_file = God.log_file
+        log_file = File.expand_path(@options[:log]) if @options[:log]        
+        if log_file
           puts "Sending output to log file: #{log_file}"
           
           # reset file descriptors
@@ -95,7 +96,7 @@ module God
           begin
             require 'god'
             
-            log_file = @options[:log] || "/dev/null"
+            log_file = @options[:log] || God.log_file || "/dev/null"
             
             # reset file descriptors
             STDIN.reopen "/dev/null"
