@@ -75,6 +75,12 @@ module God
       end
     end
     
+    def stop_if 
+      self.transition(:up, :stop) do |on| 
+        yield(on) 
+      end 
+    end
+    
     ###########################################################################
     #
     # Lifecycle
